--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,9 @@ dependencies:
   ffmpeg_kit_flutter: ^5.1.0
   file_picker: ^5.2.5
   get: ^4.6.5
-#  path_provider: ^2.0.13
+  path_provider: ^2.0.13
   process_run: ^0.12.5+2
   window_manager: ^0.3.1
-
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding
